--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ html, body {
 .input {
     background-color: #fed;
     float: left;
-    width: 900px;
+    width: 860px; /* 900px - 2*20px */
     padding: 20px;
 }
 
