Be able to draw squares over faces

--- a/public/style.css
+++ b/public/style.css
@@ -29,3 +29,12 @@ html, body {
 .input p {
     margin: 0;
 }
+
+canvas {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
