--- a/public/style.css
+++ b/public/style.css
@@ -38,3 +38,31 @@ canvas {
     -ms-user-select: none;
     user-select: none;
 }
+
+input {
+    background-color:#ffffff;
+    border:1px solid #dcdcdc;
+    display:inline-block;
+    color:#777777;
+    font-family:arial;
+    font-size:15px;
+    text-decoration:none;
+}
+
+button {
+    background-color:#ededed;
+    border:1px solid #dcdcdc;
+    display:inline-block;
+    color:#777777;
+    font-family:arial;
+    font-size:15px;
+    font-weight:bold;
+    text-decoration:none;
+}
+button:hover {
+    background-color:#dfdfdf;
+}
+button:active {
+    position:relative;
+    top:1px;
+}
