--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,13 @@ input {
     text-decoration:none;
 }
 
-button {
+button, .button {
+    cursor: default;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 6px;
+    padding-right: 6px;
+    margin: 2px;
     background-color:#ededed;
     border:1px solid #dcdcdc;
     display:inline-block;
@@ -59,10 +65,10 @@ button {
     font-weight:bold;
     text-decoration:none;
 }
-button:hover {
+button:hover, .button:hover {
     background-color:#dfdfdf;
 }
-button:active {
+button:active, .button:active {
     position:relative;
     top:1px;
 }
