--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,7 @@ input {
     text-decoration:none;
 }
 
-button, .button {
+.button {
     cursor: default;
     padding-top: 1px;
     padding-bottom: 1px;
@@ -65,10 +65,14 @@ button, .button {
     font-weight:bold;
     text-decoration:none;
 }
-button:hover, .button:hover {
+.button:hover {
     background-color:#dfdfdf;
 }
-button:active, .button:active {
+.button:active {
     position:relative;
     top:1px;
+}
+
+.facename {
+    width: 100px;
 }
