--- a/public/style.css
+++ b/public/style.css
@@ -76,3 +76,15 @@ input {
 .facename {
     width: 100px;
 }
+
+.text-sys {
+    color: green;
+}
+.text-opponent {
+    color: red;
+}
+.text-self {
+    color: blue;
+}
+.history {
+}
