--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ html, body {
     width: 900px;
     margin: auto;
     font-family: sans-serif;
+    font-size: 90%;
     color: #800;
 }
 
@@ -91,4 +92,13 @@ input {
     color: blue;
 }
 .history {
+}
+
+.alert {
+    padding: 20px;
+}
+.alert-info {
+    background-color: #efe;
+    border: solid 1px #cdc;
+    border-radius: 10px;
 }
