--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,12 @@ html, body {
     color: #800;
 }
 
+body {
+    background: rgba(255,255,255,0.5);
+    padding: 10px;
+    margin-top: 20px;
+}
+
 html {
     background-image: url(/img/squairy_light.png);
 }
