--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,16 +4,27 @@ html, body {
     font-family: sans-serif;
     font-size: 90%;
     color: #800;
+    text-shadow: 1px 1px white;
 }
 
 body {
     background: rgba(255,255,255,0.5);
     padding: 10px;
     margin-top: 20px;
+    border-radius: 15px;
+    border: 1px solid #aaa;
 }
 
 html {
     background-image: url(/img/squairy_light.png);
+}
+
+h1 a {
+    text-decoration: none;
+    color: #800;
+}
+h1 a:hover {
+    border-bottom: 1px dotted;
 }
 
 .face {
