--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,3 +136,10 @@ input {
     border: solid 1px #cdc;
     border-radius: 10px;
 }
+
+.byline {
+    margin: 0px;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 0.8em;
+}
