--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -13,10 +13,15 @@ html, body {
     border-left: 1px solid #aaa;
     border-right: 1px solid #aaa;
     border-bottom: none;
-    border-radius: 15px 15px 0px 0px;
-    padding: 2px 15px 0px 15px;
+    border-radius: 0px 15px 0px 0px;
+    padding: 2px 2px 2px 2px;
     margin: 0px;
     margin-top: 20px;
+}
+
+a.logo {
+    display: block;
+    line-height: 0;
 }
 
 .main {
