--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -52,6 +52,7 @@ h1 a:hover {
     text-align: center;
     float: left;
     width: 150px;
+    height: 150px;
     padding-top: 5px;
     padding-bottom: 5px;
 }
