--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -1,5 +1,10 @@
+* {
+    margin: 0;
+}
+
 html, body {
     width: 932px;
+    height: 100%;
     margin: auto;
     font-family: sans-serif;
     font-size: 90%;
@@ -29,6 +34,8 @@ a.logo {
     border-radius: 0px 0px 15px 15px;
     border: 1px solid #aaa;
     padding: 15px;
+    min-height: 100%;
+    box-sizing: border-box;
 }
 
 html {
@@ -169,4 +176,15 @@ a:hover {
 }
 a:visited {
     color: #600;
+}
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -150px;
+}
+
+.footer, .push {
+    height: 150px;
 }
