--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -11,7 +11,7 @@ html, body {
     text-shadow: 1px 1px white;
 }
 
-.nav {
+.header {
     background: rgba(255,255,255,0.5);
     border-top: 1px solid #aaa;
     border-left: 1px solid #aaa;
@@ -22,9 +22,39 @@ html, body {
     margin: 0px;
 }
 
+div.nav {
+    float: right;
+    height: 72px;
+}
+
+.nav ul {
+    list-style-type: none;
+    margin: auto;
+    padding: 0;
+    display: inline;
+}
+
+.nav ul li {
+    vertical-align: middle;
+    text-align: center;
+    float: right;
+    display: inline;
+    height: 72px;
+    width: 90px;
+    border-left: solid #aaa 1px;
+}
+
+a.nav {
+    margin: auto;
+    padding: 20px;
+}
+a.nav:hover {
+}
+
 a.logo {
     display: block;
     line-height: 0;
+    float: left;
 }
 
 .main {
