Add timer UI (bit crap though)

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -245,3 +245,15 @@ a:visited {
 .footer a:hover {
     color: #bbb;
 }
+
+.timer {
+    width: 100px;
+    height: 100px;
+    float: left;
+    margin-right: 5px;
+    border: solid #aaa 1px;
+    border-radius: 5px;
+    font-size: 40px;
+    vertical-align: middle;
+    text-align: center;
+}
