--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -270,40 +270,38 @@ a:visited {
 
 #lobby-chat {
     float: left;
-    border: 1px solid red;
     width: 700px;
+    border-right: 1px solid black;
 }
 
 #lobby-userlist {
     float: right;
-    border: 1px solid green;
     width: 194px;
     overflow-y: scroll;
     height: 498px;
 }
 
 #lobby-text {
-    border: 1px solid blue;
     overflow-y: scroll;
-    height: 464px;
+    height: 470px;
     font-family: monospace;
 }
 
 #lobby-input {
-    border: 1px solid black;
     height: 30px;
+    border-top: 1px solid black;
 }
 
 #lobby-input input {
     border: none;
-    height: 100%;
+    height: 28px;
     width: 650px;
 }
 
 #lobby-input button {
     width: 40px;
     margin: 0;
-    padding: 0;
+    padding: 0
     border: 0;
     height: 28px;
 }
